<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trammy Dodger</string>
    <string name="app_copyright">Copyright 2013 Blue Zero</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="title_sightings">Sightings</string>    
	<string name="title_todays_sightings">Sightings Today</string>	
	<string name="title_new_sighting">New Sighting</string>
	<string name="title_report_new_sighting">Report a new sighting</string>
    
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="action_network">Network</string>
    <string name="action_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_signout">Sign Out</string>
	
	<string name="button_sign_in_with_facebook">Sign In with <b>Facebook</b></string>
	<string name="button_sign_in_with_google">Sign In with <b>Google</b></string>
	<string name="button_sign_in_with_windows">Sign In with <b>Windows</b></string>
	<string name="button_sign_in_with_twitter">Sign In with <b>Twitter</b></string>
	
	<string name="dialog_whats_new">Whats New</string>
	<string name="dialog_sign_in">Please sign in</string>
	<string name="dialog_select_network">Select Network</string>
	<string name="dialog_sign_out">Sign out</string>
	<string name="dialog_sign_out_message">Are you sure?</string>
	
	<string name="progress_updating_sightings">Updating latest sightings</string>
	<string name="progress_retrieving_networks">Retrieving networks</string>
	<string name="progress_retrieving_stations">Retrieving stations</string>
	<string name="progress_saving_location">Saving location</string>
	<string name="progress_sighting_recorded">Sighting recorded!</string>
	
	<string name="notification_new_sighting">New sighting recorded!</string>

    <string name="toast_no_data_connection">No data connection.</string>
	<string name="toast_sign_in_error">Sign in failed. Please try again.</string>
	<string name="toast_general_error">An error occurred. Please try again.</string>

</resources>