<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"        
		android:showAsAction="ifRoom" 
		android:icon="@drawable/navigation_refresh"       
        android:title="@string/action_refresh"/>
    
    <item
        android:id="@+id/action_new_sighting"
        android:orderInCategory="100"        
		android:showAsAction="ifRoom"        
		android:icon="@drawable/content_new"
        android:title="@string/action_new"/>    
    
    <item
        android:id="@+id/action_network"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_network"/>
    
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_map"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>   
    
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_signout"/>

</menu>