<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    
    <Button android:id="@+id/googleLoginButton" 
    	android:layout_width="280dp" 
    	android:layout_height="wrap_content" 
    	android:onClick="signInWithGoogleClick" 
    	android:text="@string/button_sign_in_with_google" 
    	android:drawableLeft="@drawable/google"    	
    	android:layout_gravity="center"		
    	android:layout_marginTop="10dp"	    	
    	android:padding="10dp"/>
    
	<Button android:id="@+id/facebookLoginButton" 
    	android:layout_width="280dp" 
    	android:layout_height="wrap_content" 
    	android:onClick="signInWithFacebookClick" 
    	android:text="@string/button_sign_in_with_facebook" 
    	android:drawableLeft="@drawable/facebook" 
    	android:layout_gravity="center"
    	android:layout_marginTop="10dp"				    	
    	android:padding="10dp"/>
			
	<Button android:id="@+id/windowsLoginButton" 
    	android:layout_width="280dp" 
    	android:layout_height="wrap_content" 
    	android:onClick="signInWithWindowsClick" 
    	android:text="@string/button_sign_in_with_windows" 
    	android:drawableLeft="@drawable/windows" 
    	android:layout_gravity="center"		
    	android:layout_marginTop="10dp"		    	
    	android:padding="10dp"/>
	
	<Button android:id="@+id/twitterLoginButton" 
    	android:layout_width="280dp" 
    	android:layout_height="wrap_content" 
    	android:onClick="signInWithTwitterClick" 
    	android:text="@string/button_sign_in_with_twitter" 
    	android:drawableLeft="@drawable/twitter" 
    	android:layout_gravity="center"	
    	android:layout_marginTop="10dp"
    	android:layout_marginBottom="10dp"			    	
    	android:padding="10dp"/>
	
</LinearLayout>